<resources>
    <string name="app_name">Load App</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project %s is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide">Glide - Image Loading Library by BumpTech</string>
    <string name="project_starter">LoadApp - Current repository by Udacity</string>
    <string name="retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="download">Download</string>
    <string name="we_are_loading">We are loading</string>
    <string name="please_select_one_option">You need to select one option</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="go_back">Go back</string>
    <string name="go_to_download_details_action">Go to Download Details</string>
    <string name="view_file">View File</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="enter_url">Enter Url</string>
    <string name="kindly_type_your_url">Kindly type your Url</string>
    <string name="select_one_option_to_download">Select one option to download:</string>
</resources>
