<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:layoutDescription="@xml/details"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:id="@+id/trigger_animation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/file_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/file_name"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2" />

        <TextView
            android:id="@+id/file_name_value"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/file_name"
            tools:text="Glide Glide Glide Glide Glide Glide Glide Glide Glide Glide Glide GlideGlide Glide Glide Glide Glide GlideGlide Glide Glide Glide Glide GlideGlide Glide Glide Glide Glide GlideGlide Glide Glide Glide Glide GlideGlide Glide Glide Glide Glide GlideGlide Glide Glide Glide Glide GlideGlide Glide Glide Glide Glide GlideGlide Glide Glide Glide Glide Glide"

            app:layout_constraintStart_toEndOf="@+id/file_name" />

        <TextView
            android:id="@+id/status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/file_name_value" />

        <TextView
            android:id="@+id/status_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Fail"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@+id/status"
            app:layout_constraintTop_toTopOf="@+id/status" />

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline2"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/back_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/go_back"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/view_file_btn" />

        <Button
            android:id="@+id/view_file_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/view_file"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@color/colorAccent"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/back_btn"
            app:layout_constraintHorizontal_bias="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.motion.widget.MotionLayout>